ASM-1862 Clean-up tests and remove unused Logger imports in various classes